--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container"></div>
+  </body>
 </html>
