added functionality for etch-a-sketch, added functionality to alter the side of the grid as well as to reset the current one

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="gridCreator">
+      <label for="userInput">How many squares?(per side):</label>
+      <input type="text" id="userInput" />
+      <button class="gridCreatorButton">Edit Grid</button>
+      <button class="resetGrid">Reset Grid</button>
+    </div>
+
+    <div class="grid"></div>
   </body>
 </html>
